--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,7 +1,7 @@
 .header {
 	background:#f5f7fa;
 	color:#000;
-	width:1200px;
+	// width:1200px;
 	border-bottom: 1px solid #e6e9ed;
 	padding-top: 20px;
 	padding-bottom: 20px;
